@@ -160,19 +160,23 @@ wxString CppTemplateParser::ValueToCode( PropertyType type, wxString value )
 		{
 			if ( !value.empty() )
 			{
-				wxFont font = TypeConv::StringToFont( value );
-				result	= wxString::Format( wxT("wxFont( %i, %i, %i, %i, %s, wxT(\"%s\") )" ),
-											font.GetPointSize(),
+				wxFontContainer font = TypeConv::StringToFont( value );
+
+				int pointSize = font.GetPointSize();
+				wxString size = pointSize <= 0 ? wxT("wxNORMAL_FONT->GetPointSize()") : wxString::Format( wxT("%i"), pointSize ).c_str();
+
+				result	= wxString::Format( wxT("wxFont( %s, %i, %i, %i, %s, %s )" ),
+											size.c_str(),
 											font.GetFamily(),
 											font.GetStyle(),
 											font.GetWeight(),
 											( font.GetUnderlined() ? wxT("true") : wxT("false") ),
-											font.GetFaceName().c_str()
+											( font.m_faceName.empty() ? wxT("wxEmptyString") : wxString::Format( wxT("wxT(\"%s\")"), font.m_faceName.c_str() ).c_str() )
 											);
 			}
 			else
 			{
-				result = wxT("wxFont()");
+				result = wxT("*wxNORMAL_FONT");
 			}
 			break;
 		}
